assets/styles/main.scss
@import '@fancyapps/fancybox/dist/jquery.fancybox.css';
@import 'spectrum-colorpicker/spectrum.css';
@import 'reset-css/sass/_reset.scss';

/* base */

html {
    height: 100%;
    overflow-x: hidden;
}

body {
    font: lighter 18px/27px 'Open Sans', Arial, sans-serif;
    color: black;
    background: url(../images/bg.gif) repeat;
    height: 100%;
    position: relative;
}

select,
input {
    border: solid 1px #cccccc;
    border-radius: 2px;
    padding: 6px;
}

button:focus {
    outline: 1px dotted currentColor;
}

button::-moz-focus-inner {
    border: 0;
}

#js-loading-message {
    margin: 1em;
    text-align: center;
}

.app-toplevel {
    height: 100%;
}

#message {
    position: fixed;
    width: 100%;
    background: #e6e6fa;
    border: 1px solid #00008b;
    color: #00008b;
    filter: alpha(opacity=90);
    opacity: 0.9;
    z-index: 100;
    text-align: center;
    padding: 10px;
}

#message button {
    font: lighter 18px/27px 'Open Sans', Arial, sans-serif;
    text-align: center;
    border-radius: 2px;
    cursor: pointer;
    background: #cccccc;
    border: 0;
    color: currentColor;
    padding: 0;
}

#message.error {
    background: #f2dede;
    border-color: #eed3d7;
    color: #b94a48;
}

/* navigation */

#nav {
    background: #191718;
    border-right: 5px solid #3d6d69;
    z-index: 10;
    overflow-x: hidden;
}

#nav-filter a,
#nav-tags a,
#nav-sources a {
    display: block;
    text-decoration: none;
}

#nav hr {
    border: 0;
    border-bottom: 1px solid #272325;
}

#nav-logo {
    margin-left: 20px;
    margin-top: 14px;
    background: url(../images/logo.png);
    flex-shrink: 0;
    width: 31px;
    height: 37px;
}

#nav-mark {
    width: 150px;
    border: none;
    padding: 10px;
    margin-left: 15px;
    margin-right: 15px;
    color: #d7d7d7;
    background: #3d6d69;
    font-size: 0.9em;
    text-align: center;
    border-radius: 2px;
    cursor: pointer;
}

#nav-mark[disabled],
#nav-mark[disabled]:hover {
    background: #525858;
    color: #808080;
    cursor: not-allowed;
}

#nav-mark:hover {
    color: #000000;
}

#nav-filter-wrapper {
    flex-shrink: 0;
}

#nav-filter-title {
    margin-top: 20px;
}

#nav-filter {
    margin-bottom: 30px;
}

#nav-filter li a {
    color: #6a6a6a;
    padding: 5px;
    padding-left: 24px;
    margin-top: 5px;
    font-weight: normal;
    font-size: 0.9em;
    cursor: pointer;
}

#nav-filter li a.active {
    background: #272325;
    color: #d7d7d7;
    font-size: 1em;
}

#nav-filter span {
    font-size: 0.55em;
    color: #777777;
}

.unread-count {
    display: inline;
}

#nav-mobile-count.unread-count {
    display: none;
}

.unread-count.unread {
    background-color: #e74c3c;
    border-radius: 30px;
    color: white !important;
    font-size: 0.6em !important;
    padding: 0 5px 0 5px;
    margin-left: 5px;
    vertical-align: baseline !important;
    display: inline !important;
}

.unread-count.unread span {
    color: white !important;
    font-weight: normal;
    font-size: 1em !important;
}

.unread-count.online span.count::before {
    content: '\2601\a0'; /* cloud and non breaking space */
}

.unread-count.unread.offline {
    background-color: #187fff;
}

span.offline-count {
    display: none;
    color: #187fff !important;
}

.unread-count span.offline-count {
    color: white !important;
}

span.offline-count::after {
    content: ' / ';
    color: #187fff !important;
}

.unread-count span.offline-count::after {
    color: white !important;
}

span.offline-count.diff {
    display: inline !important;
}

.nav-section-toggle {
    cursor: pointer;
    background-color: transparent;
    display: block;
    width: 100%;
    text-align: inherit;
    line-height: 2;
    font-family: inherit;
    border: 0;
    color: #494949;
    text-transform: uppercase;
    font-size: 0.8rem;
    font-weight: bold;
}

.nav-ts-wrapper {
    overflow: auto;
    scrollbar-width: thin;
    scrollbar-color: dark;
    flex-grow: 1;
}

.nav-ts-wrapper.offline {
    display: none;
}

.nav-unavailable {
    display: none;
}

.nav-unavailable.offline {
    display: block;
    text-align: center;
    opacity: 0.8;
    font-size: 0.7em;
    line-height: 1.2em;
    color: white;
}

#nav-tags li a {
    position: relative;
    color: #b9b9b9;
    cursor: pointer;
    padding: 5px;
    padding-left: 25px;
    padding-right: 20px;
    font-weight: lighter;
    font-size: 0.7em;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

#nav-tags li a.active {
    background: #272325;
    color: #d7d7d7;
}

#nav-tags li .unread {
    margin-right: 0.25em;
}

#nav-tags .color {
    width: 10px;
    height: 10px;
    border-radius: 2px;
    margin-left: auto;
    flex-shrink: 0; /* preserve aspect ratio */
}

#nav-sources li a,
#nav-tags li a {
    display: flex;
    align-items: center;
}

#nav-sources li .nav-source,
#nav-tags li .tag {
    text-overflow: ellipsis;
    min-width: 0;
    overflow: hidden;
    margin-right: 0.25em;
}

#nav-sources li a {
    position: relative;
    color: #b9b9b9;
    cursor: pointer;
    padding-left: 25px;
    padding-right: 20px;
    font-weight: lighter;
    font-size: 0.7em;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

#nav-sources li a.active {
    background: #272325;
    color: #d7d7d7;
}

#nav-sources li a.unread {
    font-weight: bold;
    font-size: 0.7em;
}

#nav .unread {
    font-size: 0.9em;
    vertical-align: sub;
    color: #777777;
}

.nav-toolbar {
    display: flex;
    padding: 0.25em;
    text-align: center;
    margin-top: auto;
}

.nav-toolbar button {
    font-size: 1.2rem;
    background: #272325;
    border-radius: 2px;
    border: none;
    color: #484447;
    cursor: pointer;
    display: inline-block;
    flex-grow: 1;
    height: 3em;
    margin: 0.25em;
    padding: 0;
}

.nav-toolbar button.offline {
    border: solid #187fff 1px;
}

#nav-mobile {
    display: none;
}
/* ... */

